--- a/web/flaskapp/app/templates/layout.html
+++ b/web/flaskapp/app/templates/layout.html
@@ -4,18 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Core Bootstrap CSS -->
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <!-- Icon Library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <!-- JS and jquery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//apis.google.com/js/platform.js" async defer></script>
   <!-- Stylesheet -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/style.css')}}">
-  <!-- Font -->
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
   <!-- Bootstrap JS and Jquery -->
   <!-- Note: DO NOT MOVE, INCLUDING THESE AT THE END CAUSES NAVBAR TO NOT COLLAPSE-->
   <script src="//code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -38,14 +32,9 @@
 </head>
 <body class="main-body">
   <!-- FIXME: stick a navbar here -->
-  <main role="main" class="container" style = "min-height: calc(100vh - 120px);">
-    <div class="row">
-      <div class="col-md">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
-    <!-- Main content End -->
+  {% block content %}
+  {% endblock %}
+  <!-- Main content End -->
   </main>
 </body>
 <!-- Footer Begin-->
