Removed hardcoded userid

--- a/web/flaskapp/app/templates/inbox.html
+++ b/web/flaskapp/app/templates/inbox.html
@@ -8,8 +8,7 @@
   <h1>Inbox</h1>
 </div>
 
-{# set currentUser = session["email"] #}
-{% set currentUser = "userID1" %}
+{% set currentUser = session["email"] %}
 
 <div class="container">
   <div class="row">
