--- a/web/flaskapp/app/templates/inbox.html
+++ b/web/flaskapp/app/templates/inbox.html
@@ -5,7 +5,18 @@
 <script src="{{url_for('static', filename='scripts/displayMessage.js')}}" type="text/javascript"></script>
 
 <div class="container">
-  <h1>Inbox</h1>
+  <div class="row">
+    <div class="col-9">
+      <h1>Inbox</h1>
+    </div>
+    <div class="col-1">
+      <button type="button" class="btn btn-primary">Compose</button>
+    </div>
+    <div class="col-1">
+      <button type="button" class="btn btn-danger">Logout</button>
+    </div>
+    <div class="col-1"></div>
+  </div>
 </div>
 
 {% set currentUser = session["email"] %}
