--- a/web/flaskapp/app/templates/inbox.html
+++ b/web/flaskapp/app/templates/inbox.html
@@ -35,7 +35,7 @@
         <form action="{{ url_for('inbox') }}" enctype="multipart/form-data" method="POST">
           <input type="hidden" id="formType" name="formType" value="newMessage">
           <div class="container" style="text-align: center">
-            <input name="to" class="form-control mb-1" id="to" placeholder="Email of Recipient" required></input>
+            <input type=email name="to" class="form-control mb-1" id="to" placeholder="Email of Recipient" required></input>
             <input name="message" class="form-control mb-1" id="message" placeholder="Message Contents" required></input>
             <button type="submit" class="btn btn-primary">Send</button>
           </div>
@@ -69,7 +69,7 @@
 
     <div class="col-8 messageContents">
       <h3 id="placeholder">Select a message to get started</h3>
-      <p style="color: red">{{ errorMessage }}</p>
+      <p id="errorMessage" class="errorMessage">{{ errorMessage }}</p>
       {% for msgId, msgObj in messages.items() %}
         <div id={{msgId}} class="message" style="display: none;">
           <!-- Messages will be aligned left if from other user, right if from currentUser -->
